Alignment Fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -341,7 +341,7 @@ canvas {
 ## hero-content entry-footer
 ------------------------------------------------------------*/
 .hero-content .entry-footer {
-  margin-top: 65px;
+  margin-top: 100px;
   text-align: center;
 }
 
@@ -364,7 +364,7 @@ canvas {
 # The Lineup Artists - Headliners
 ------------------------------------------------------------*/
 .content-section {
-  min-height: 4640px;
+  min-height: 3370px;
   width: 100%;
   padding-bottom: 120px;
   background: url("../images/middle-cover.jpg") no-repeat;
